apps/tosalim-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tosalim-api
spec:
  selector:
    app: tosalim-api
  ports:
    - port: 5000
      targetPort: 5000
      name: http-api
      protocol: TCP
  type: ClusterIP
