apps/tosalim-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosalim-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: tosalim-api-tls
      hosts:
        - tosalimapi-test.picturo.us
  rules:
    - host: tosalimapi-test.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tosalim-api
                port:
                  number: 5000
